Fix z-index issue

--- a/app/client/compass/sass/_header.sass
+++ b/app/client/compass/sass/_header.sass
@@ -48,6 +48,7 @@ $header_height: 5rem
     background: $secondary-color
     list-style: none
     padding: 1rem
+    z-index: 5
     +speech_bubble(top, 18.5rem, $secondary-color, 0, $secondary-color)
     &.is_active
         @extend .bigEntrance
